core/tests/snapshots/snapshots__stacked_core_prelude_test@none.snap
---
source: core/tests/snapshots.rs
expression: output
---
#[::core::prelude::v1::test]
fn already_has_test() {
  {
    mod init {
      pub fn init() {}
    }
    init::init();
  }
}
