core/tests/snapshots/snapshots__stacked_test_attribute@log.snap
---
source: core/tests/snapshots.rs
expression: output
---
#[test]
fn already_has_test() {
  mod init {
    pub fn init() {
      {
        let _result = ::test_log::env_logger::builder()
          .parse_env(
            ::test_log::env_logger::Env::default().default_filter_or("info"),
          )
          .target(::test_log::env_logger::Target::Stderr)
          .is_test(true)
          .try_init();
      }
    }
  }
  init::init();
}
