core/tests/snapshots/snapshots__stacked_test_attribute@none.snap
---
source: core/tests/snapshots.rs
expression: output
---
#[test]
fn already_has_test() {
  mod init {
    pub fn init() {}
  }
  init::init();
}
